v 0.10.0
- Added `aperi_fm1` program to handle org.freedesktop.FileManager1 ShowItems requests

v 0.9.0
- Added support for /etc/aperi global config directory
- Fixed a couple of memory leaks

v 0.8.0
- Removed deprecated `*` rule

v 0.7.2

- Add a missing check when handling URI rules

v 0.7.1

- Fixed bug where not URI rules could be applied to URI arguments

v 0.7

- Honor XDG_CONFIG_HOME variable, if present, to find the config directory
- Deprecated '*' rule, replaced by '/*' rule
- Added support for placeholders in launcher rules
- Added support for quoting via `"` in configuration file, to enable the use
of `,` and `=` in rules patterns and of spaces in command arguments

v 0.6

- Added output of the version number to the usage string

v 0.5

- Implemented percent decoding of file:// uris

v 0.4

- Added support for multipart extensions, like .tar.gz
- Fix: prevent rules from matching shorter extensions (abcd= matched .abc)
- Fixed aperi.desktop file to handle uris
- Improvements in README.md

v 0.3

- Removed `gtk4-open` helper and substituted with `app-chooser`
- Changed configuration path from .config/aperi.cfg to .config/aperi/config